# dian_git

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  sdkconfig  sdkconfig.old
components/BSP/: CMakeLists.txt
components/BSP/KEY/: key.c  key.h
components/BSP/LED/: led.c  led.h
components/BSP/MYI2S/: myi2s.c  myi2s.h
components/BSP/MYIIC/: myiic.h
components/BSP/SPI_SD/: spi_sd.c  spi_sd.h
components/BSP/UART/: uart.c  uart.h
components/Middlewares/MYFATFS/: exfuns.c  exfuns.h
components/Middlewares/RPLIDAR/: CMakeLists.txt  rplidar.c  rplidar.h
components/Middlewares/TEXT/: CMakeLists.txt  fonts.c  fonts.h  text.c  text.h
components/Middlewares/VL53L1X/: CMakeLists.txt  VL53L1X_api.c  vl53l1_platform.c  vl53l1x.c  vl53l1x.h
components/control/chassis/: CMakeLists.txt  chassis.c  chassis.h
components/control/follow_avoid/: CMakeLists.txt  follow_avoid.c  follow_avoid.h
components/i2c_module/: CMakeLists.txt  i2c_module.c  i2c_module.h
components/imu_module/: imu_i2c_driver.c
components/sensors/a02yyuw/: CMakeLists.txt  a02yyuw.c  a02yyuw.h  sw_uart.c  sw_uart.h
components/sensors/bu_uwb/: CMakeLists.txt  bu_uwb.c  bu_uwb.h
components/sensors/fsr_adc/: CMakeLists.txt  fsr_adc.c  fsr_adc.h
docs/algorithm/: follow-and-avoidance.md
docs/sensors/: README.md  driver-usage.md  module-review.md  pinout-and-wiring.md  test-flow.md
examples/follow_robot/: CMakeLists.txt  sdkconfig.defaults
examples/sensor_hub/: CMakeLists.txt  sdkconfig.defaults
main/: CMakeLists.txt  IIC.c  idf_component.yml  main.c  softap_sta.c
tests/algorithm/: run_tests.sh  test_follow_avoid.c
tests/protocol/: run_tests.sh  test_sensor_parsers.c
(+24 files in other folders)
